Started EDLgroup fixes for fltk1.4.
Former-commit-id: d5c4e0ceefcb43708c6823d798f47ffbf27ba1e5 [formerly bcd0f8f63c52f5c52623e2b8b198948f33e18a72 [formerly 1c83c58427a4e4dc43696468fd81ba36c5a70422]]
Former-commit-id: 70a72e8743ad54cecd6ce9d11e77bc4286c72d58 [formerly b33736c9a0bd29cf73e8197fc5354735e272cba6] [formerly 262884ea1e3f4194a3f28f8510f02ee2435596d7 [formerly c716e73401d9293f784d2c75db5c948990514434]] [formerly d13ce9f66abba756febe22fb7e4bbe169bb85a5c [formerly d2c4adbfe5860cc1f88402275c6c18111297ecdb] [formerly 1a380262425f6c94ca164022391856f2c9109a2d [formerly 92694922cb824348d5e7d0430f4bd3dddff74641]]]
Former-commit-id: f7a13c36449503774943d7ce20f26e8d3a38a86e [formerly 8d3e6bf77379d55071abc77aa18ead83a13fae17] [formerly f509eaf35bd446b3cf8c3a67a7a625b321d9d997 [formerly d5305d550d633aa73ff9f1762d6d587b99520a35]]
Former-commit-id: bca1480efe9c2aae46d87ddc34de6caca53866a0 [formerly 2e2e195aef9a4a2508e3a0cc188fe2eb9cd4ea45]
Former-commit-id: 5a82aa279760c4c68ba5468116ab64d19c617e71

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,5 +1,5 @@
-<<<<<<< HEAD
-=======
+v4.4.8   - Bug fixed timeline min/max setting with S/E buttons.
+
 v4.4.7   - Bug fixed AVIs with yuvj422p color schemes as they were being
 	   read darker by swscale (deprecated format).
 	 - Bug fixed inverse fps change in image information window.
@@ -9,7 +9,6 @@ v4.4.7   - Bug fixed AVIs with yuvj422p color schemes as they were being
 v4.4.6   - Bug fixed histogram, color area, vectorscope and waveform to
 	   work with image sequences.
 
->>>>>>> b117193cc... Improved YUV color conversion.
 v4.4.5
          - Bug fixed thumbnails in our own file requester which was crashing
            the viewer in beta-2.
