--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,3 +1,6 @@
+v5.0.1alpha1
+	 - Bug fixed clone image and deleting it afterwards twice.
+
 v4.4.8   - Bug fixed timeline min/max setting with S/E buttons.
 
 v4.4.7   - Bug fixed AVIs with yuvj422p color schemes as they were being
