Updated files for fltk1.4.  Removed useless mrvPreferencesBrowser.cpp/h.
Former-commit-id: 3c79b573e74028e8e3d2a0149d63b8e93834ee47 [formerly 95c9d54d6722018ebd0be707417e12f3d158eb92]
Former-commit-id: ca0ccd1d5d0ab8ae9474c018e8c134280655c2f3 [formerly a767b31ea402da5675d0e6605d8a9c5eab4c8b87]
Former-commit-id: 105058dfae86d49b9427b9e1030f5aaa75f0e957

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,5 +1,6 @@
 v5.0.1alpha1
 	 - Bug fixed clone image and deleting it afterwards twice.
+	 - Bug fixed exiting with the Waveform window open.
 
 v4.4.8   - Bug fixed timeline min/max setting with S/E buttons.
 
